Mon Aug 22 11:22:34 GMT 2011  Olly Betts <olly@survex.com>

	* python/pythontest2.py: Use "if x is not None:" rather than "if x !=
	  None:" (PEP 8).

Wed Aug 17 11:07:41 GMT 2011  Olly Betts <olly@survex.com>

	* lua/Makefile.am: Add dependency on except.i so it gets (re)generated
	  when it should.

Wed Aug 17 10:11:52 GMT 2011  Olly Betts <olly@survex.com>

	* lua/Makefile.am,lua/docs/examples/simpleexpand.lua,lua/: Merge latest
	  Lua improvements from Xiaona Han.

Mon Aug 15 01:28:51 GMT 2011  Olly Betts <olly@survex.com>

	* python/doxy2swig.py,python/pythontest2.py,python/testsuite2.py:
	  Remove trailing whitespace.

Mon Aug 15 01:19:06 GMT 2011  Olly Betts <olly@survex.com>

	* python/pythontest2.py,python/testsuite2.py: Move the check for
	  leaked objects into the testsuite harness so all tests get checked,
	  not just the two which are regression tests for leaks in older
	  versions.  This also gives us a single place to disable it if it
	  should prove problematic in alternative Python implementations.

Sun Aug 14 12:45:09 GMT 2011  Olly Betts <olly@survex.com>

	* python/pythontest2.py: In test_matchingterms_iter, run the code
	  we're testing for leaks twice, and only check for leaks the second
	  time to avoid falsely reporting a leak when some cached value gets
	  initialised under Python 2.5.

Fri Aug 12 23:18:20 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.7 and ChangeLog.

Mon Aug 08 03:35:23 GMT 2011  Olly Betts <olly@survex.com>

	* java/SmokeTest.java: Fix == comparisons with literal strings.

Thu Aug 04 07:34:14 GMT 2011  Olly Betts <olly@survex.com>

	* xapian-headers.i,xapian.i: Wrap iterator operator++ and operator--
	  methods with a new INC_OR_DEC macro, replacing the old NEXT and
	  PREV macros.

Thu Aug 04 07:21:36 GMT 2011  Olly Betts <olly@survex.com>

	* xapian-head.i,xapian-headers.i: We no longer need special handling
	  for ValueIteratorEnd_ in the bindings, as that hack is gone from the
	  C++ API headers.
